# Homework_31

./: README.md  create_fixtures.py  pyproject.toml  pytest.ini  utils.py
HW_27/: asgi.py  settings.py  urls.py  wsgi.py
ads/: models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
ads/fixtures/: ad.json  category.json
ads/migrations/: 0001_initial.py  0002_alter_ad_description_alter_ad_is_published.py  0002_initial.py  0003_alter_ad_description.py  0003_remove_ad_author_ad_author_id_ad_category_id_and_more.py  0004_alter_ad_description.py  0004_rename_author_id_ad_author_and_more.py  0005_alter_ad_author.py  0006_alter_category_id.py  0007_alter_category_id.py  0008_alter_ad_options_alter_category_options.py  0009_remove_ad_address.py  0010_alter_ad_category_delete_category.py
categories/: models.py  serializers.py  urls.py  views.py
categories/fixtures/: category.json
categories/migrations/: 0001_initial.py  0002_category_slug.py  0003_alter_category_slug.py
locations/: models.py  serializers.py  views.py
locations/fixtures/: location.json
locations/migrations/: 0001_initial.py  0002_alter_location_id.py  0002_alter_location_lat_alter_location_lng.py  0003_alter_location_id.py  0004_alter_location_lat_alter_location_lng.py  0005_alter_location_options.py  0006_alter_location_lat_alter_location_lng.py
selections/: models.py  permissions.py  serializers.py  urls.py  views.py
selections/migrations/: 0001_initial.py  (+1 more)
tests/: conftest.py  factories.py  fixtures.py
users/: models.py  serializers.py  urls.py  validators.py  views.py
(+22 files in other folders)
